fixed warthog version config file

--- a/apps/config.h.in
+++ b/apps/config.h.in
@@ -1,8 +1,8 @@
 #ifndef WARTHOG_APP_CONFIG_H
 
-#define WARTHOG_VERSION "@CMAKE_VERSION@"
-#define WARTHOG_VERSION_MAJOR @CMAKE_VERSION_MAJOR@
-#define WARTHOG_VERSION_MINOR @CMAKE_VERSION_MINOR@
-#define WARTHOG_VERSION_REVISON @CMAKE_VERSION_REVISON@
+#define WARTHOG_VERSION "@CMAKE_PROJECT_VERSION@"
+#define WARTHOG_VERSION_MAJOR @CMAKE_PROJECT_VERSION_MAJOR@
+#define WARTHOG_VERSION_MINOR @CMAKE_PROJECT_VERSION_MINOR@
+#define WARTHOG_VERSION_REVISON @CMAKE_PROJECT_VERSION_PATCH@
 
 #endif // WARTHOG_APP_CONFIG_H
