reduced cmake version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.13)
 
 project(Warthog
 	VERSION 0.1.0
@@ -8,9 +8,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 # only compile binaries by default if top level, as apps will search for additional deps
-set(WARTHOG_COMPILE_BINARIES ${PROJECT_IS_TOP_LEVEL} CACHE BOOL "Compile warthog binaries located in apps/")
-
 include(cmake/submodule.cmake)
+warthog_top_level()
+set(WARTHOG_COMPILE_BINARIES ${_is_top} CACHE BOOL "Compile warthog binaries located in apps/")
 
 add_library(warthog_core)
 add_library(warthog::core ALIAS warthog_core)
