--- a/.github/workflows/clang-format-apply.yml
+++ b/.github/workflows/clang-format-apply.yml
@@ -5,19 +5,21 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: DoozyX/clang-format-lint-action@v0.18.1
       with:
         source: '.'
         exclude: './extern ./libs'
-        clangFormatVersion: 18
+        clangFormatVersion: 18.1.3
         inplace: True
-    - uses: EndBug/add-and-commit@v9
-      with:
-        author_name: Clang-Format Robot
-        author_email: Ryan.Hechenberger@proton.me
-        message: 'Committing clang-format changes'
+    - run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -a -m "auto clang-format action"
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
