--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.13)
 
 # find_package(Getopt)
 
-configure_file(config.h.in config.h @ONLY)
 target_sources(warthog_app PRIVATE warthog.cpp cfg.cpp)
-target_sources(warthog_app PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/config.h cfg.h)
+target_sources(warthog_app PUBLIC cfg.h)
 target_include_directories(warthog_app PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
