--- a/cmake/config.h.in
+++ b/cmake/config.h.in
@@ -5,4 +5,6 @@
 #define WARTHOG_VERSION_MINOR @CMAKE_PROJECT_VERSION_MINOR@
 #define WARTHOG_VERSION_REVISON @CMAKE_PROJECT_VERSION_PATCH@
 
+#cmakedefine WARTHOG_INT128
+
 #endif // WARTHOG_APP_CONFIG_H
