--- a/.github/workflows/clang-format-test.yml
+++ b/.github/workflows/clang-format-test.yml
@@ -1,6 +1,8 @@
 name: clang-format-test
 
-on: [pull_request]
+on:
+  pull_request:
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
   build:
