--- a/cmake/config.h.in
+++ b/cmake/config.h.in
@@ -6,5 +6,8 @@
 #define WARTHOG_VERSION_REVISON @CMAKE_PROJECT_VERSION_PATCH@
 
 #cmakedefine WARTHOG_INT128
+#cmakedefine WARTHOG_INTRIN_ALL
+#cmakedefine WARTHOG_BMI
+#cmakedefine WARTHOG_BMI2
 
 #endif // WARTHOG_APP_CONFIG_H
