bugfix and unit test for grid functions

--- a/tests/units/CMakeLists.txt
+++ b/tests/units/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.13)
 
-add_executable(warthog_test_units)
-target_link_libraries(warthog_test_memory Catch2::Catch2WithMain warthog::core)
-# catch_discover_tests(warthog_test_memory)
+add_executable(warthog_test_units grid.cxx)
+target_link_libraries(warthog_test_units Catch2::Catch2WithMain warthog::core)
+catch_discover_tests(warthog_test_units)
