--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Warthog
 	VERSION 0.5.0
 	LANGUAGES CXX C)
 
+set_property(GLOBAL PROPERTY WARTHOG_${module} ON)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
