--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Warthog
 	VERSION 0.5.0
 	LANGUAGES CXX C)
 
+set_property(GLOBAL PROPERTY WARTHOG_warthog-core ON)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
@@ -12,7 +14,7 @@ option(WARTHOG_BMI "Enable support cpu BMI for WARTHOG_INTRIN_HAS(BMI)" OFF)
 option(WARTHOG_BMI2 "Enable support cpu BMI2 for WARTHOG_INTRIN_HAS(BMI2), use for Zen 3+" OFF)
 option(WARTHOG_INTRIN_ALL "Enable march=native and support x86 intrinsics if able (based on system), supersedes all manual instruction sets" OFF)
 
-include(cmake/submodule.cmake)
+include(cmake/warthog.cmake)
 
 add_library(warthog_compile INTERFACE)
 add_library(warthog::compile ALIAS warthog_compile)
